"ChangeLog"

# NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
# This version tag is used in building "cvstag.h" for version identification.

2007-12-19	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-82-02-ACT-03-01-prsim-08-10:
	  prsim: print which events are weak in output
		Added some debugging code, updated TODO list.
		Added new test case with different behavior from reference.


2007-12-18	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-82-02-ACT-03-01-prsim-08-09:
	  First draft of VPI plug-in, based on reference vpi_prsim.c.
	  Makefile.am: build vpihacprsim.la as a shared-library module.
	  sim/prsim/vpi-prsim.cc: ported from reference code.
		Successfully loads as a plug-in! automatically bringing
		in dependent shared libraries.
		Doesn't fully work yet, still debugging callbacks, 
		and timing, and mystery return values.
	  Documented in dox/prsim/cosim.texi (of hacprsim.texi.info)
	  TODO: somehow test-case?


2007-12-18	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-82-02-ACT-03-01-prsim-08-08:
	  util/ChangeLog: critical tokenize bug fix, memory-related.  


2007-12-17	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-82-02-ACT-03-01-prsim-08-07:
	  No source revision, added TODO notes and a few test cases.


2007-12-13	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-82-02-ACT-03-01-prsim-08-06:
	  prsim: fanin-get: also print the pull state of the memoized
		subexpression for convenient debugging.  
		Prints <1> for pull-on, <0> for pull-off, 
		and <X> for pull-unknown.  Updated few test cases.
	  Added bunch more small test cases for weak rules.
		Still seeing some suspicious behavior, marked as expect-fail.


2007-12-12	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-82-02-ACT-03-01-prsim-08-05:
	  One more patch for consistent behavior with reference prsim: