@@ -8,7 +8,7 @@
 	TODO: consider using some form of auto-indent
 		in the help-system.  
 
-	$Id: Command-prsim.cc,v 1.4 2007/12/01 04:25:31 fang Exp $
+	$Id: Command-prsim.cc,v 1.4.4.1 2007/12/20 18:35:50 fang Exp $
 
 	NOTE: earlier version of this file was:
 	Id: Command.cc,v 1.23 2007/02/14 04:57:25 fang Exp
@@ -28,6 +28,7 @@ DEFAULT_STATIC_TRACE_BEGIN
 #include <iterator>
 
 #include "sim/prsim/Command-prsim.h"
+#include "sim/prsim/Command-prsim-export.h"
 #include "sim/prsim/State-prsim.h"
 #include "sim/command_base.tcc"
 #include "sim/command_category.tcc"
@@ -292,6 +293,7 @@ Without @var{n}, takes only a single step.
 @end deffn
 @end texinfo
  */
+#if 0
 struct Step {
 public:
 	static const char               name[];
@@ -299,81 +301,13 @@ public:
 	static CommandCategory&         category;
 	static int      main(State&, const string_list&);
 	static void     usage(ostream&);
-	static ostream& print_watched_node(ostream&, const State&, 
-		const node_index_type, const string&);
-	static ostream& print_watched_node(ostream&, const State&, 
-		const State::step_return_type&);
-	static ostream& print_watched_node(ostream&, const State&, 
-		const State::step_return_type&, const string&);
 private:
 	static const size_t             receipt_id;
 };      // end class Step
+#endif
 
-INITIALIZE_COMMAND_CLASS(Step, "step", simulation,
+DECLARE_AND_INITIALIZE_COMMAND_CLASS(Step, "step", simulation,
 	"step through event")
-
-static
-inline
-node_index_type
-GET_NODE(const State::step_return_type& x) {
-	return x.first;
-}
-
-static
-inline
-node_index_type
-GET_CAUSE(const State::step_return_type& x) {
-	return x.second;
-}
-
-/**
-	Yeah, I know looking up already looked up node, but we don't
-	care because printing and diagnostics are not performance-critical.  
-	\param nodename the name to use for reporting, which need not be
-		the canonical name of the node, but some equivalent.  
- */
-ostream&
-Step::print_watched_node(ostream& o, const State& s, 
-		const State::step_return_type& r, const string& nodename) {
-	const node_index_type ni = GET_NODE(r);
-	// const string nodename(s.get_node_canonical_name(ni));
-	const State::node_type& n(s.get_node(ni));
-	n.dump_value(o << nodename << " : ");
-	const node_index_type ci = GET_CAUSE(r);
-	if (ci) {
-		const string causename(s.get_node_canonical_name(ci));
-		const State::node_type& c(s.get_node(ci));
-		c.dump_value(o << "\t[by " << causename << ":=") << ']';
-	}
-	if (s.show_tcounts()) {
-		o << "\t(" << n.tcount << " T)";
-	}
-	return o << endl;
-}
-
-/**
-	This automatically uses the canonical name.  
- */
-ostream&
-Step::print_watched_node(ostream& o, const State& s, 
-		const State::step_return_type& r) {
-	const node_index_type ni = GET_NODE(r);
-	const string nodename(s.get_node_canonical_name(ni));
-	return print_watched_node(o, s, r, nodename);
-}
-
-/**
-	This variation deduces the cause of the given node's last transition,
-	the last arriving input to a firing rule.  
-	\param nodename the name to use for reporting.  
- */
-ostream&
-Step::print_watched_node(ostream& o, const State& s, 
-		const node_index_type ni, const string& nodename) {
-	return print_watched_node(o, s,
-		State::step_return_type(ni, s.get_node(ni).get_cause_node()), 
-		nodename);
-}
 
 /**
 	Like process_step() from original prsim.  
@@ -487,6 +421,7 @@ if (a.size() != 2) {
 		return Command::BADARG;
 	}
 	const time_type stop_time = s.time() +add;
+#if 0
 	State::step_return_type ni;
 	s.resume();
 	try {
@@ -504,7 +439,7 @@ if (a.size() != 2) {
 			TODO: factor this out for maintainability.  
 		***/
 		if (s.watching_all_nodes()) {
-			Step::print_watched_node(cout << '\t' << s.time() <<
+			print_watched_node(cout << '\t' << s.time() <<
 				'\t', s, ni);
 		}
 		if (n.is_breakpoint()) {
@@ -514,7 +449,7 @@ if (a.size() != 2) {
 				GET_NODE(ni)));
 			if (w) {
 			if (!s.watching_all_nodes()) {
-				Step::print_watched_node(cout << '\t' <<
+				print_watched_node(cout << '\t' <<
 					s.time() << '\t', s, ni);
 			}	// else already have message from before
 			}
@@ -540,6 +475,9 @@ if (a.size() != 2) {
 	}
 	// else leave the time at the time as of the last event
 	return Command::NORMAL;
+#else
+	return prsim_advance(s, stop_time, true);
+#endif
 }
 }	// end Advance::main()
 
@@ -588,7 +526,7 @@ if (a.size() != 1) {
 			Step::main() and Advance::main().
 		***/
 		if (s.watching_all_nodes()) {
-			Step::print_watched_node(cout << '\t' << s.time() <<
+			print_watched_node(cout << '\t' << s.time() <<
 				'\t', s, ni);
 		}
 		if (n.is_breakpoint()) {
@@ -598,7 +536,7 @@ if (a.size() != 1) {
 				GET_NODE(ni)));
 			if (w) {
 			if (!s.watching_all_nodes()) {
-				Step::print_watched_node(cout << '\t' <<
+				print_watched_node(cout << '\t' <<
 					s.time() << '\t', s, ni);
 			}	// else already have message from before
 			}
@@ -1185,7 +1123,7 @@ if (a.size() != 2) {
 	if (ni) {
 		// we have ni = the canonically allocated index of the bool node
 		// just look it up in the node_pool
-		Step::print_watched_node(cout, s, ni, objname);
+		print_watched_node(cout, s, ni, objname);
 		return Command::NORMAL;
 	} else {
 		cerr << "No such node found." << endl;
@@ -1746,7 +1684,7 @@ if (a.size() != 2) {
 	const string& objname(a.back());
 	const node_index_type ni = parse_node_to_index(objname, s.get_module());
 	if (ni) {
-		// Step::print_watched_node(cout, s, ni, objname);
+		// print_watched_node(cout, s, ni, objname);
 		s.backtrace_node(cout, ni);
 		return Command::NORMAL;
 	} else {
